Creates skeleton for recipe pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1> Odin Recipes </h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/noodles.html">Noodle Recipe</a>
+    <a href="recipes/strawberry-pie.html">Strawberry Pie Recipe</a>
   </body>
 
 </html>
