Fills the skeleton for the recipe on noodles

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -4,42 +4,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title> Recipe for  </title>
+  <title> Recipe for Noodles </title>
 </head>
 <body>
-  <h1> Recipe</h1>
-  <img src="" 
-    alt = >
+  <h1>Noodles Recipe</h1>
+  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8154213.jpg&w=596&h=792&c=sc&poi=face&q=60" 
+    alt = Noodles placed nicely in a bowl>
   <h4>Description</h4>
-  <p></p>
-  <p></p> 
-  <p></p>
+  <p>These noodles are a great and healthy meal, perfect for people 
+    short of time and always on the move!</p>
+  <p>Serving 8 people this recipe would be perfect when made ahead 
+    of time and stored for meals at work.</p> 
   <br>
   <h4>Ingredients</h4>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>1 (16 ounce) package linguine pasta</li>
+      <li>6 cloves garlic, minced</li>
+      <li>6 tablespoons suga</li>
+      <li>6 tablespoons safflower oil</li>
+      <li>6 tablespoons rice vinegar</li>
+      <li>6 tablespoons soy sauce</li>
+      <li>2 tablespoons sesame oil</li>
+      <li>2 teaspoons chili sauce</li>
+      <li>6 green onions, sliced</li>
+      <li>1 teaspoon sesame seeds, toasted</li>
     </ul>
   <br>
   <h4>Steps:</h4>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Bring a pot of lightly salted water to boil. Add pasta, 
+        and cook until al dente, about 8 to 10 minutes. Drain, 
+        and transfer to a serving bowl.</li>
+      <li>Meanwhile, place a saucepan over medium-high heat. Stir in 
+        garlic, sugar, oil, vinegar, soy sauce, sesame oil, and chili 
+        sauce. Bring to a boil, stirring constantly, until sugar dissolves. 
+        Pour sauce over linguine, and toss to coat. Garnish with green 
+        onions and sesame seeds.</li>
     </ol>
   <br>
   <h4>Nutrition Facts</h4>
-  <p><strong>Per Serving:</strong> </p>
+  <p><strong>Per Serving:</strong>371 calories; protein 7.9g; carbohydrates 
+    52g; fat 14.8g; sodium 699.2mg.</p>
 </body>
 </html>
