Fills the skeleton for the strawberry pie recipe

--- a/recipes/stawberry-pie.html
+++ b/recipes/stawberry-pie.html
@@ -4,42 +4,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title> Recipe for  </title>
+  <title> Recipe for Strawberry Pie </title>
 </head>
 <body>
-  <h1> Recipe</h1>
-  <img src="" 
-    alt = >
+  <h1>Strawberry Pie Recipe</h1>
+  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F401339.jpg" 
+    alt = Vibrant image of a strawberry pie>
   <h4>Description</h4>
-  <p></p>
-  <p></p> 
-  <p></p>
+  <p>This is a great picnic dessert which will have everyone coming back for seconds!</p>
+  <p>Serving 8 people, this summer-y pie will freshen you, 
+    and everyone else lucky enough to get a piece.</p> 
   <br>
   <h4>Ingredients</h4>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>1 (9 inch) pie crust, baked</li>
+      <li>1 quart fresh strawberries</li>
+      <li>1 cup white sugar</li>
+      <li>3 tablespoons cornstarch</li>
+      <li>3/4 cup water</li>
+      <li>1/2 cup heavy whipping cream</li>
     </ul>
   <br>
   <h4>Steps:</h4>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Arrange half of strawberries in baked pastry shell. Mash remaining berries and 
+        combine with sugar in a medium saucepan. Place saucepan over medium heat and 
+        bring to a boil, stirring frequently.</li>
+      <li>In a small bowl, whisk together cornstarch and water. Gradually stir cornstarch
+         mixture into boiling strawberry mixture. Reduce heat and simmer mixture until 
+         thickened, about 10 minutes, stirring constantly. Pour mixture over berries 
+         in pastry shell.</li>
+      <li>Chill for several hours before serving. In a small bowl, whip cream until 
+        soft peaks form. Serve each slice of pie with a dollop of whipped cream.</li>
     </ol>
   <br>
   <h4>Nutrition Facts</h4>
-  <p><strong>Per Serving:</strong> </p>
+  <p><strong>Per Serving:</strong> 265 calories; protein 1.5g; carbohydrates 41.9g; 
+    fat 10.9g; cholesterol 20.4mg; sodium 109.3mg.</p>
 </body>
 </html>
