--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
   <body>
     <h1> Odin Recipes </h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <a href="recipes/noodles.html">Noodle Recipe</a>
-    <a href="recipes/strawberry-pie.html">Strawberry Pie Recipe</a>
+      <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/noodles.html">Noodle Recipe</a></li>
+        <li><a href="recipes/strawberry-pie.html">Strawberry Pie Recipe</a></li>
+    </ul>
   </body>
 
 </html>
